fix(v2): wrap code blocks on print

--- a/packages/docusaurus-theme-classic/src/theme/CodeBlock/styles.module.css
+++ b/packages/docusaurus-theme-classic/src/theme/CodeBlock/styles.module.css
@@ -63,3 +63,9 @@
   min-width: 100%;
   padding: var(--ifm-pre-padding);
 }
+
+@media print {
+  .codeBlockLines {
+    white-space: pre-wrap;
+  }
+}
